--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -9,9 +9,9 @@
 <div class="navi"></div>
 <div class="container">
 
-    <h1 style="text-align: center;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">USUARIOS </h1>
-    <h2 style="text-align: center;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">"Click sobre el usuario para más detalles"</h2>
- <div class="row justify-content-center">
+    <h1>LISTA DE USUARIOS REGISTRADOS </h1>
+    <h2>"Click sobre cualquier usuario para ver detalles"</h2>
+ <div>
     <table class="table table-hover" style="width: 100px;">
         <thead>
             <tr>
@@ -47,7 +47,7 @@
         rows.forEach(function(row) {
             row.addEventListener('click', function() {
                 var userId = this.getAttribute('data-id');
-                window.location.href = '/Users/Details/' + userId; // Reemplaza 'ControllerName' con el nombre de tu controlador
+                window.location.href = '/Users/Details/' + userId;
             });
         });
     });
