--- a/Views/Users/Details.cshtml
+++ b/Views/Users/Details.cshtml
@@ -3,49 +3,109 @@
 @{
     ViewData["Title"] = "DETALLES";
 }
-<div class="navi"></div>
-<div class="navi"></div>
-<div class="container ">
-    <h1 class="text-center">DETALLES DEL USUARIO</h1>
 
-        
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewData["Title"]</title>
+    <style>
+        /* Estilos generales */
+body {
+    margin: 10px;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+/* Títulos */
+.container h1 {
+    text-align: center;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+
+dt.col-sm-2, dd.col-sm-10 {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+dt.col-sm-2 {
+    font-weight: bold;
+    background-color: #6dfde5;
+}
+
+dd.col-sm-10 {
+    margin-left: 0;
+    background-color: #fff;
+}
+
+/* Imagen de avatar */
+.image-fit {
+    max-width: 150px;
+    max-height: 150px;
+    border-radius: 25%;
+    border: 1px solid #ddd;
+    margin-top: 10px;
+}
+
+/* Botón de regresar */
+.btn-dark {
+    background-color: #ff0000;
+    color: #fff;
+    padding: 10px 20px;
+    margin-top: 20px;
+}
+
+.btn-dark:hover {
+    background-color: #00ff73;
+}
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1 class="text-center">DETALLES DE USUARIOS REGISTRADOS</h1>
         <hr />
-    <div style="margin-left: 500px;">
-        <dl class="row ">
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.id)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.id)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.email)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.email)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.first_name)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.first_name)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.last_name)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.last_name)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.avatar)
-            </dt>
-            <dd class = "col-sm-10">
-                <img src="@Html.DisplayFor(model => model.avatar)" class="d-block image-fit ">                                        
-            </dd>
-        </dl>
-        <div>
-        <a style="margin-left: 100px;" class="btn btn-dark" asp-action="Index">Regresar</a>
+        <div style="margin-left: 500px;">
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.id)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.id)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.email)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.email)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.first_name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.first_name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.last_name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.last_name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.avatar)
+                </dt>
+                <dd class="col-sm-10">
+                    <img src="@Model.avatar" class="d-block image-fit">
+                </dd>
+            </dl>
+            <div>
+                <a style="margin-left: 100px;" class="btn btn-dark" asp-action="Index">Regresar</a>
+            </div>
+        </div>
     </div>
-    </div>
-    
-</div>
+</body>
+</html>
