--- a/Views/Users/Details.cshtml
+++ b/Views/Users/Details.cshtml
@@ -35,7 +35,7 @@ dt.col-sm-2, dd.col-sm-10 {
 
 dt.col-sm-2 {
     font-weight: bold;
-    background-color: #6dfde5;
+    background-color: #657eee;
 }
 
 dd.col-sm-10 {
