cambios en la "LISTA DE USUARIOS REGISTRADOS"

--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -66,7 +66,6 @@
 <body>
     <div class="container">
         <h1>LISTA DE USUARIOS REGISTRADOS</h1>
-        <h2>"Click sobre cualquier usuario para ver detalles"</h2>
         <div>
             <table class="table table-hover">
                 <thead>
@@ -77,19 +76,22 @@
                         <th>
                             @Html.DisplayNameFor(model => model.email)
                         </th>
-                        <th></th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model)
                     {                
-                        <tr class="table-row" data-id="@item.id">
+                        <tr>
                             <td>
                                 @Html.DisplayFor(modelItem => item.id)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.email)
-                            </td>      
+                            </td>
+                            <td>
+                                <button class="btn btn-primary view-details" data-id="@item.id">Ver Detalles</button>
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -98,9 +100,9 @@
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            var rows = document.querySelectorAll('.table-row');
-            rows.forEach(function(row) {
-                row.addEventListener('click', function() {
+            var buttons = document.querySelectorAll('.view-details');
+            buttons.forEach(function(button) {
+                button.addEventListener('click', function() {
                     var userId = this.getAttribute('data-id');
                     window.location.href = '/Users/Details/' + userId;
                 });
