--- a/Views/Users/Registro.cshtml
+++ b/Views/Users/Registro.cshtml
@@ -98,23 +98,23 @@
                 <form asp-action="Registro">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group fw-bold text-uppercase">
-                        <label asp-for="id" class="control-label"></label>
+                        <label class="control-label">ID</label>
                         <input asp-for="id" class="form-control" />
                     </div>
                     <div class="form-group fw-bold text-uppercase">
-                        <label asp-for="email" class="control-label"></label>
+                        <label class="control-label">Correo Electrónico</label>
                         <input asp-for="email" class="form-control" />
                     </div>
                     <div class="form-group fw-bold text-uppercase">
-                        <label asp-for="first_name" class="control-label"></label>
+                        <label class="control-label">Nombre</label>
                         <input asp-for="first_name" class="form-control" />
                     </div>
                     <div class="form-group fw-bold text-uppercase">
-                        <label asp-for="last_name" class="control-label"></label>
+                        <label class="control-label">Apellido</label>
                         <input asp-for="last_name" class="form-control" />
                     </div>
                     <div class="form-group fw-bold text-uppercase">
-                        <label asp-for="avatar" class="control-label"></label>
+                        <label class="control-label">Avatar</label>
                         <input asp-for="avatar" class="form-control" />
                     </div>
                     <div class="form-group form-container">
@@ -127,4 +127,5 @@
     </div>
 </body>
 </html>
+
 
